// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workflow renders a workflow component 1`] = `
<div>
  <div
    class="inline field field-wrapper-state-select"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-state-select"
              id="fieldset-undefined-field-label-state-select"
            >
              State
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="react-select__control css-yjz7n5-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-86rg1c-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  <span
                    style="margin-right: 10px; display: inline-block; background-color: rgb(237, 64, 51); height: 10px; width: 10px; border-radius: 50%;"
                  />
                  Private
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-wmatm6-dummyInput-DummyInput"
                  id="react-select-3-input"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-6fp5c8-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    class="icon"
                    style="height: 24px; width: auto; fill: #007bc1;"
                    viewBox=""
                    xmlns=""
                  />
                </div>
              </div>
            </div>
            <input
              name="state-select"
              type="hidden"
              value="private"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Workflow renders an empty workflow component 1`] = `
<div>
  <div
    class="inline field field-wrapper-state-select"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-state-select"
              id="fieldset-undefined-field-label-state-select"
            >
              State
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="react-select-container react-select--is-disabled css-14jk2my-container"
          >
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="react-select__control react-select__control--is-disabled css-1g1dlbm-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-86rg1c-ValueContainer"
              >
                <div
                  class="react-select__single-value react-select__single-value--is-disabled css-107lb6w-singleValue"
                >
                  <span
                    style="margin-right: 10px; display: inline-block; background-color: rgb(0, 123, 193); height: 10px; width: 10px; border-radius: 50%;"
                  />
                  Published
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-wmatm6-dummyInput-DummyInput"
                  disabled=""
                  id="react-select-2-input"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-8z7nta-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    class="icon"
                    style="height: 24px; width: auto; fill: #007bc1;"
                    viewBox=""
                    xmlns=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
